# wgputinker

./: Cargo.toml  Trunk.toml  index.html
docs/: index.html  sw.js  wgputinker.js  wgputinker_bg.wasm
src/: custom3d_wgpu_shader.wgsl  main.rs
